# 3DR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
imgs/: README.md
imgs/results/panorama/: README.md
imgs/results/stitch/: README.md
include/: camera.hpp  config.hpp  constants.hpp  features.hpp  frame.hpp  global.hpp  homographies.hpp  map.hpp  optimizer.hpp  panorama.hpp  point.hpp  renderer.hpp  slam.hpp  stitch.hpp  timer.hpp  two.hpp  utils.hpp  viewer.hpp
include/glad/: glad.h
include/slam/: utils.hpp
include/svo/: handler.h  initialization.hpp
scripts/: initmap.sh  initmap_gen.sh  pipeline.sh  run.sh  slam.sh
src/: camera.cpp  config.cpp  features.cpp  frame.cpp  glad.c  handler.cpp  initialization.cpp  map.cpp  optimizer.cpp  panorama.cpp  point.cpp  slam.cpp  stitch.cpp  timer.cpp  two.cpp  utils.cpp  viewer.cpp
src/slam/: core.py  optimizer.py  slam.cpp  slam.py  utils.cpp  utils.py
tests/: CMakeLists.txt  test_SVD.cpp  test_cpp.cc  test_eigen.cpp  test_fast_corners.cpp  test_init.cpp  test_init_generalized.cpp  test_math.cpp  test_opencv.cpp  test_pangolin.cc  test_panorama.cpp  test_pipeline.cpp  test_rotate.cpp  test_scale.cpp  test_stitch.cpp  test_translate.cpp  test_twoview.cpp  test_utils.cpp  test_viewer.cpp
tests/ceres/: 01_auto.cc  ba.cc  curve_fitting.cc  powell.cc  robust_curve_fitting.cc
tests/slam/: test_slam.cc
